package br.puc.moedaestudantil.model;

public enum StatusNotificacao {
    PENDENTE,
    ENVIADA
}
