package br.puc.moedaestudantil.service;

/** Par assunto/corpo de um e-mail, produzido por um template. */
public record MensagemEmail(String assunto, String corpo) {
}
