@startuml class
' Diagrama de Classes — Sistema de Moeda Estudantil (atualizado Lab04S01)
' Reflete o modelo de domínio realmente implementado: TransferenciaMoeda
' e Resgate como entidades separadas (decisão de Fase 2/3), Notificacao
' como outbox interno, TokenRecuperacao para reset. Lab04S01: a transferência
' dispara duas notificações (aluno + professor) via MensagemEmail.

skinparam shadowing false
skinparam classAttributeIconSize 0
title Diagrama de Classes — Sistema de Moeda Estudantil

enum TipoAtor {
  ALUNO
  PROFESSOR
  EMPRESA_PARCEIRA
  ADMIN
}

enum StatusNotificacao {
  PENDENTE
  ENVIADA
}

abstract class Usuario {
  - id: long
  - nome: string
  - email: string
  - ativo: boolean = true
  + autenticar(login, senha): boolean
  + desativar(): void
}

class Credencial {
  - id: long
  - login: string
  - senhaHash: string
  - tipoAtor: TipoAtor
  + validarSenha(senha): boolean
  + redefinirSenha(nova): void
}

class Instituicao {
  - id: long
  - nome: string
}

class Aluno {
  - cpf: string
  - rg: string
  - endereco: string
  - curso: string
  - saldo: int = 0
  + resgatar(v: Vantagem): Resgate
  + consultarExtrato(): List<LinhaExtrato>
  + consultarCupons(): List<Resgate>
}

class Professor {
  - cpf: string
  - departamento: string
  - saldo: int = 0
  + transferir(a: Aluno, valor: int, motivo: string): TransferenciaMoeda
  + receberGrantSemestral(): void
  + consultarExtrato(): List<LinhaExtrato>
  + listarAlunosDaInstituicao(): List<Aluno>
}

class EmpresaParceira {
  - cnpj: string
  + cadastrarVantagem(descricao, custo, foto): Vantagem
  + editarVantagem(v): void
  + desativarVantagem(v): void
}

class Vantagem {
  - id: long
  - descricao: string
  - custo: int
  - foto: byte[]
  - fotoContentType: string
  - ativa: boolean = true
  - criadaEm: datetime
  + estaAtiva(): boolean
  + temFoto(): boolean
}

class TransferenciaMoeda {
  - id: long
  - valor: int
  - motivo: string
  - realizadaEm: datetime
}

class Resgate {
  - id: long
  - custo: int
  - codigo: string
  - realizadoEm: datetime
}

class Notificacao {
  - id: long
  - destinatario: string
  - assunto: string
  - corpo: string
  - status: StatusNotificacao
  - codigoReferencia: string
  - criadaEm: datetime
}

class TokenRecuperacao {
  - id: long
  - token: string
  - expiraEm: datetime
  - usado: boolean = false
  - criadoEm: datetime
  + valido(): boolean
  + marcarUsado(): void
}

' Value-object usado pela UI para consolidar transferências + resgates por aluno
class LinhaExtrato <<record>> {
  - data: datetime
  - tipo: string
  - descricao: string
  - valor: int
  - referencia: string
}

' Value-object produzido pelos templates de e-mail (assunto + corpo)
class MensagemEmail <<record>> {
  - assunto: string
  - corpo: string
}

' === Herança ===
Usuario <|-- Aluno
Usuario <|-- Professor
Usuario <|-- EmpresaParceira

' === Agregação (tem-um, vida própria) ===
Instituicao     "1" o-- "*" Aluno     : agrega
Instituicao     "1" o-- "*" Professor : agrega
EmpresaParceira "1" o-- "*" Vantagem  : agrega

' === Associações ===
Usuario "1" --> "1" Credencial : autentica-se com
Credencial "1" --> "*" TokenRecuperacao : pode gerar

' Transferência: Professor → Aluno
TransferenciaMoeda "*" --> "1" Professor : origem
TransferenciaMoeda "*" --> "1" Aluno     : destinatário

' Resgate: Aluno → Vantagem
Resgate "*" --> "1" Aluno    : por
Resgate "*" --> "1" Vantagem : de

' Eventos que disparam notificação
TransferenciaMoeda ..> Notificacao : "dispara (2: aluno + professor)"
Resgate            ..> Notificacao : "dispara (2: aluno + empresa)"
TokenRecuperacao   ..> Notificacao : "dispara (link reset)"

note right of Professor
  FR-004 — Concessão semestral
  acumula sobre saldo atual; NÃO zera.
end note

note right of Aluno
  Invariante: saldo ≥ 0
  (CHECK no banco).
end note

note right of Usuario
  Superclasse abstrata.
  Mapeada como JPA JOINED:
  uma tabela `usuario` (pai) + uma
  tabela por subclasse concreta.
  Admin não tem subclasse (existe
  apenas em `credencial`).
end note

note right of Resgate
  `codigo` é UUID v4, único (FR-015).
  Aparece no e-mail do aluno e
  no e-mail da empresa parceira
  para conferência presencial.
end note

note right of Notificacao
  Outbox interno: sem SMTP.
  Cada "envio" é uma linha
  persistida; a UI mostra a caixa
  em /notificacoes e
  /admin/notificacoes.
end note

note right of MensagemEmail
  Produzida por TemplatesEmailMoeda:
  um template para o aluno (recebimento)
  e um para o professor (confirmação de
  envio) — Lab04S01. Vira o assunto/corpo
  de uma Notificacao.
end note

note right of TokenRecuperacao
  TTL = 1h. Uso único.
  US7 — recuperação de senha.
end note

@enduml
